<resources>
    <string name="app_name">HotDogAdmin</string>
    <string name="_title_text">Willkommen bei Hotdog 2.0 Administrator!</string>
    <string name="inventur">Inventur</string>
    <string name="bestellungen_ansehen">Bestellungen ansehen</string>
    <string name="preise_festlegen">Preise festlegen</string>
    <string name="choose_ingredients">Bitte legen Sie die Preise für die Zutaten fest</string>
    <string name="category_hotdog">Hotdog (Wurst + Brot)</string>
    <string name="category_bbq_sauce">BBQ-Sauce</string>
    <string name="category_ketchup">Ketchup</string>
    <string name="category_mayonnaise">Mayonnaise</string>
    <string name="category_curry">Curry</string>
    <string name="category_onion">Zwiebeln</string>
    <string name="category_cheese">Käse</string>
    <string name="order_button_text" >Preise aktualisieren</string>
    <string name="update_pricing">Update Pricing</string>
    <string name="category_warning">WICHTIG: Bitte überprüfe Deine Eingaben vor der Aktualisierung der Preise!</string>
    <string name="category_hotdog_solo">Hotdog</string>
    <string name="ingredients">Zutaten</string>
    <string name="orig_ingredients">Vorrat</string>
    <string name="orders_ingredients">Bestellt</string>
    <string name="add_ingredients">Hinzufügen\u00A0</string>
    <string name="stock_warning">WICHTIG: Bitte überprüfe Deine Eingaben vor der Aktualisierung der Vorräte!</string>
    <string name="add_button_text">Vorräte aktualisieren</string>
    <string name="order_number">Bestellnummer</string>
    <string name="order_bbq">BBQ-Sauce</string>
    <string name="order_ketchup">Ketchup</string>
    <string name="order_mayonnaise">Mayonnaise</string>
    <string name="order_curry">Curry</string>
    <string name="order_onion">Zwiebeln</string>
    <string name="order_cheese">Käse</string>
    <string name="order_delete">Bezahlt</string>
    <string name="orig_prices">Aktuelle Preise</string>
    <string name="update_prices">Neue Preise</string>
    <string name="order_extras">Zusätzliche Zutaten</string>
</resources>
