<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/_title_text"
            android:textAppearance="?android:textAppearanceMedium"/>

        <ProgressBar
            android:layout_marginLeft="10dp"
            android:layout_gravity="end"
            android:id="@+id/loadingProgressBar"
            android:layout_width="28dp"
            android:layout_height="28dp" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_centerHorizontal="true"
            android:id="@+id/inventory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/inventur"/>
        <Button
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:layout_below="@+id/inventory"
            android:id="@+id/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bestellungen_ansehen"/>
        <Button
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:layout_below="@+id/order"
            android:id="@+id/pricing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preise_festlegen"/>


    </RelativeLayout>


</LinearLayout>