<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/order_number"
            android:layout_width="270dp"
            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="8dp"
            android:text="@string/order_number"
            android:textAppearance="?android:textAppearanceSmall"/>

        <TextView
            android:id="@+id/order_delete"
            android:textColor="@color/colorAccent"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingTop="8dp"
            android:text="@string/order_delete"
            android:textAppearance="?android:textAppearanceSmall"/>


    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/order_number_in"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="8dp"
            android:hint="...lädt"
            android:textAppearance="?android:textAppearanceSmall"/>
        <CheckBox
            android:id="@+id/paid_checkbox"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="...lädt"
            />



    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/order_extras"
            android:layout_width="270dp"
            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="8dp"
            android:text="@string/order_extras"
            android:textAppearance="?android:textAppearanceSmall"/>

    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/order_extra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="8dp"
            android:text="@string/order_extras"
            android:textAppearance="?android:textAppearanceSmall"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:paddingTop="0dp"/>

    </LinearLayout>




</LinearLayout>